# boki-spring-cloud-gateway

./: .editorconfig  test.sh
api-key-service/: build.gradle.kts
api-key-service/src/main/kotlin/boki/tistory/apikeyservice/config/: RedisConfig.kt
api-key-service/src/main/kotlin/boki/tistory/apikeyservice/controller/: ApiKeyController.kt
api-key-service/src/test/api-client/: api-key.rest
book-service/: .env  package-lock.json  package.json
book-service/src/: app.controller.ts  app.module.ts  main.ts
book-service/src/book/: book.controller.ts  book.module.ts  book.service.ts
book-service/src/book/dto/: book.dto.ts  create-book.dto.ts  update-book.dto.ts
book-service/src/guard/: ApiKeyGuard.ts
review-service/: main.py  pyproject.toml  review.rest
spring-cloud-gateway-java/: build.gradle
spring-cloud-gateway-java/src/main/java/boki/tistory/springcloudgatewayjava/: SpringCloudGatewayJavaApplication.java
spring-cloud-gateway-java/src/main/resources/: application.yaml
spring-cloud-gateway-java/src/test/api-client/: gateway-test.http
spring-cloud-gateway-java/src/test/java/boki/tistory/springcloudgatewayjava/: SpringCloudGatewayJavaApplicationTests.java
user-service/: build.gradle
user-service/src/main/java/boki/tistory/userservice/: DatabaseLoader.java  UserServiceApplication.java
user-service/src/main/java/boki/tistory/userservice/domain/: User.java
user-service/src/main/resources/: application.yaml
user-service/src/test/api-client/: user.rest
user-service/src/test/java/boki/tistory/userservice/: UserServiceApplicationTests.java
(+9 files in other folders)
