[tool.poetry]
name = "review-service"
version = "0.1.0"
description = ""
authors = ["seung.bok <lsb530@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

